--- a/volumes/rosbridge/package.xml
+++ b/volumes/rosbridge/package.xml
@@ -8,7 +8,7 @@
 
     <maintainer email="andreas.bresser@dfki.de">Andreas Bresser</maintainer>
 
-    <license>GPLv3</license>
+    <license>BSD-3</license>
 
     <author email="andreas.bresser@dfki.de">Andreas Bresser</author>
 
